# Multi-DL

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
multidl/: __init__.py  __main__.py  cli.py  main.py  multidl.py  spotify.py  terminal.py  youtube.py
src/multidl/: __init__.py  __main__.py  config.py  core.py  term.py  utils.py
src/multidl/services/: helpers.py  spotify.py  yt.py
