[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "multidl"
version = "1.0.0"
requires-python= ">=3.10"
description = "A multimedia downloader which can download any video, music, playlist, album etc via link, keywords etc"
authors = [{name = "Swayam"}]
license = {text = "MIT"}
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
keywords = ["multimedia", "multi downloader", "video downloader", "song downloader", "audio downloader", "downloader"]
classifiers = [
    "Development Status :: Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[tool.setuptools]
packages = ["multidl"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
multidl = "multidl.cli:app"
