[project]
name = "multidl"
version = "2.0.2"
description = "A cli tool for downloading media from various platforms."
license = "GPL-3.0"
readme = "README.md"
authors = [{ name = "Swayam" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "click<8.2.0",
    "ffmpeg>=1.4",
    "mutagen>=1.47.0",
    "platformdirs>=4.3.8",
    "pyfiglet>=1.0.2",
    "rich>=14.0.0",
    "spotipy>=2.25.1",
    "toml>=0.10.2",
    "typer>=0.15.3",
    "yt-dlp>=2025.4.30",
]

[project.scripts]
multidl = "multidl.__main__:app"

[project.urls]
Homepage = "https://github.com/swayam25/Multi-DL"
GitHub = "https://github.com/swayam25/Multi-DL"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
no-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]
